--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+  }
+
+
+
 header {
     width: auto;
     height: 50%;
@@ -7,32 +13,90 @@ header {
     color: white;
     text-align: center;
     display: flex;
+    grid-area: header;
 }
+
+ body {
+    height: 100vh;
+} 
 
 section {
     display: flex;
-    height: 50%;
+    /* height: 50%; */
     width: auto;
-    flex-direction: row;
+    /* flex-direction: row; */
     justify-content: center;
     background-color: rgb(0, 0, 0);
     color: white;
     margin: 0 auto;
+    
 }
 
 
 .item1 {
     flex-direction: column;
     text-align: center;
-
+    margin: 35px;
+    width: auto;
+    grid-area: item1;
 }
 
 .item2 {
     flex-direction: column;
     text-align: center;
+    margin: 35px;
+    width: auto;
+    grid-area: item2;
 }
 
 .item3 {
-    flex-direction: column;
+    flex-direction: column; 
     text-align: center;
+    margin: 35px;
+    width: auto;
+    grid-area: item3;
+}
+
+.headerBlue {
+    background-color: blue;
+    height: 30px;
+    
+}
+
+.headerRed {
+    background-color: red;
+    height: 30px;
+    
+}
+
+.headerPurple {
+    background-color: purple;
+    height: 30px;
+    
+}
+
+  @media (max-width: 992px) {
+    /* For desktop: */
+    .grid-container{
+        display: grid;
+        grid-template-columns: 1fr, 1fr, 1fr;
+        /* grid-template-rows: 1fr, 1fr; */
+        grid-template-areas: 
+        'header header header'
+        'item1 item2 item3';
+    }
+  }
+
+   @media (max-width: 576px) {
+  /* For mobile phones: */
+    .grid-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        /* grid-template-rows: 1fr, 1fr, 1fr, 1fr; */
+        grid-template-areas: 
+        'header'
+        'item1'
+        'item2'
+        'item3';
+    } 
 }
